[package]
name = "bndl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.8"
globset = "0.4.13"
human-panic = "1.2.2"
serde = "1.0.192"
serde_json = "1.0.108"
swc = "0.269.47"
swc_common = { version = "0.33.8", features = ["tty-emitter"] }
swc_ecma_ast = "0.110.9"
swc_ecma_parser = "0.141.21"
walkdir = "2.4.0"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = "thin"
