cargo-features = ["different-binary-name"]

[package]
name = "bndl_convert"
version = "1.0.7"
description = "Convert a tsconfig.json to an SWC compatible config"
authors = ["Niels Segers <contact@niels.foo>"]
edition = "2021"
license = "MIT"
keyword = ["turbo", "monorepo", "bundle", "compile", "transpile", "typescript", "swc"]
categories = ["command-line-utilities"]
homepage = "https://github.com/segersniels/bndl/"
repository = "https://github.com/segersniels/bndl/"

[lib]
name = "bndl_convert"

[[bin]]
name = "bndl_convert"
filename = "bndl-convert"

[dependencies]
bndl_deps = { version = "1.0.1", path = "../bndl-deps" }
clap = "4.4.8"
env_logger = "0.10.1"
globset = "0.4.13"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
swc = "0.269.47"
swc_common = { version = "0.33.8", features = ["tty-emitter"] }
swc_ecma_ast = "0.110.9"
swc_ecma_parser = "0.141.21"
