cargo-features = ["different-binary-name"]

[package]
name = "bndl_cli"
version = "1.0.1"
description = "A basic TypeScript transpiling and bundling tool for (primarily backend) monorepos"
authors = ["Niels Segers <contact@niels.foo>"]
edition = "2021"
license = "MIT"
keyword = ["turbo", "monorepo", "bundle", "compile", "transpile", "typescript"]
categories = ["command-line-utilities"]
homepage = "https://github.com/segersniels/bndl/"
repository = "https://github.com/segersniels/bndl/"

[[bin]]
name = "bndl_cli"
filename = "bndl"

[dependencies]
bndl_convert = { version = "1.0.2", path = "../bndl-convert" }
clap = "4.4.8"
env_logger = "0.10.1"
globset = "0.4.13"
human-panic = "1.2.2"
log = "0.4.20"
serde = "1.0.192"
serde_json = "1.0.108"
swc = "0.269.47"
swc_common = { version = "0.33.8", features = ["tty-emitter"] }
walkdir = "2.4.0"
