[package]
name = "bndl_cli"
version = "1.5.5"
description = "A basic TypeScript transpiling and bundling tool for (primarily backend) monorepos"
authors = ["Niels Segers <contact@niels.foo>"]
edition = "2021"
license = "MIT"
keyword = ["turbo", "monorepo", "bundle", "compile", "transpile", "typescript"]
categories = ["command-line-utilities"]
homepage = "https://github.com/segersniels/bndl/"
repository = "https://github.com/segersniels/bndl/"

[[bin]]
name = "bndl"
path = "src/main.rs"

[dependencies]
bndl_deps = { version = "1.0.4", path = "../bndl_deps" }
bndl_convert = { version = "1.2.2", path = "../bndl_convert" }
clap = "4.4.8"
env_logger = "0.10.1"
human-panic = "1.2.2"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sourcemap = "7.0.1"
swc = "0.269.47"
swc_common = { version = "0.33.8", features = ["tty-emitter"] }
walkdir = "2.4.0"
pathdiff = "0.2.1"
notify = "6.1.1"
rayon = "1.8.0"
