[package]
name = "bndl_cli"
version = "1.9.0"
description = "A basic TypeScript transpiling and bundling tool for (primarily backend) monorepos"
authors = ["Niels Segers <contact@niels.foo>"]
edition = "2021"
license = "MIT"
keyword = ["turbo", "monorepo", "bundle", "compile", "transpile", "typescript"]
categories = ["command-line-utilities"]
homepage = "https://github.com/segersniels/bndl/"
repository = "https://github.com/segersniels/bndl/"

[[bin]]
name = "bndl"
path = "src/main.rs"

[dependencies]
bndl_deps = { version = "1.2.0", path = "../bndl_deps" }
bndl_convert = { version = "1.4.0", path = "../bndl_convert" }
clap = "4.4.8"
env_logger = "0.10.1"
human-panic = "1.2.2"
log = "0.4.20"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sourcemap = "9.1.2"
swc = "9.0.0"
swc_common = { version = "5.0.0", features = ["tty-emitter"] }
walkdir = "2.4.0"
pathdiff = "0.2.1"
notify = "6.1.1"
rayon = "1.8.0"
lazy_static = "1.4.0"
command-group = "5.0.1"
ctrlc = "3.4.4"
