[package]
name = "bndl_convert"
version = "1.2.4"
description = "Convert a tsconfig.json to an SWC compatible config"
authors = ["Niels Segers <contact@niels.foo>"]
edition = "2021"
license = "MIT"
keyword = [
  "turbo",
  "monorepo",
  "bundle",
  "compile",
  "transpile",
  "typescript",
  "swc",
]
categories = ["command-line-utilities"]
homepage = "https://github.com/segersniels/bndl/"
repository = "https://github.com/segersniels/bndl/"

[lib]
name = "bndl_convert"

[[bin]]
name = "bndl-convert"
path = "src/main.rs"

[dependencies]
bndl_deps = { version = "1.0.4", path = "../bndl_deps" }
clap = "4.4.8"
env_logger = "0.10.1"
globset = "0.4.13"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
swc = "0.273.13"
swc_common = { version = "0.33.18", features = ["tty-emitter"] }
swc_ecma_ast = "0.112.4"
swc_ecma_parser = "0.143.5"
swc_ecma_transforms_module = "0.180.10"
