[package]
name = "bndl_convert"
version = "1.4.0"
description = "Convert a tsconfig.json to an SWC compatible config"
authors = ["Niels Segers <contact@niels.foo>"]
edition = "2021"
license = "MIT"
keyword = [
  "turbo",
  "monorepo",
  "bundle",
  "compile",
  "transpile",
  "typescript",
  "swc",
]
categories = ["command-line-utilities"]
homepage = "https://github.com/segersniels/bndl/"
repository = "https://github.com/segersniels/bndl/"

[lib]
name = "bndl_convert"

[[bin]]
name = "bndl-convert"
path = "src/main.rs"

[dependencies]
bndl_deps = { version = "1.2.0", path = "../bndl_deps" }
clap = "4.4.8"
env_logger = "0.10.1"
globset = "0.4.13"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
swc = "9.0.0"
swc_common = { version = "5.0.0", features = ["tty-emitter"] }
swc_ecma_ast = "5.0.0"
swc_ecma_parser = "6.0.1"
swc_ecma_transforms_module = "7.0.0"
