[package]
name = "bndl_deps"
version = "1.1.2"
description = "Internal crate responsible for all internal dependency config resolving"
authors = ["Niels Segers <contact@niels.foo>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/segersniels/bndl/"
repository = "https://github.com/segersniels/bndl/"

[dependencies]
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
walkdir = "2.4.0"
